--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -102,18 +102,16 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            core.info(`Using tag: ${context.ref_name}`);
-            try {
-              const release = await github.rest.repos.getReleaseByTag({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                tag: context.ref_name
-              });
-              core.info(`Found release with upload_url: ${release.data.upload_url}`);
-              return release.data.upload_url;
-            } catch (error) {
-              core.setFailed(`No release found for tag ${context.ref_name}: ${error}`);
-            }
+            // 从 context.ref 中提取 tag 名（例如 "refs/tags/v1.0.0" -> "v1.0.0"）
+            const tag = context.ref.startsWith("refs/tags/") ? context.ref.substring("refs/tags/".length) : context.ref;
+            core.info(`Using tag: ${tag}`);
+            const release = await github.rest.repos.getReleaseByTag({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag: tag
+            });
+            core.info(`Found release with upload_url: ${release.data.upload_url}`);
+            return release.data.upload_url;
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
