--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -126,12 +126,34 @@ jobs:
             core.info(`Found release with upload_url: ${uploadUrl}`);
             return uploadUrl;
 
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: 'Release ${{ github.ref_name }}'
+          draft: false
+          prerelease: false
+
+
+      - name: Debug GITHUB_TOKEN
+        shell: powershell
+        run: |
+          if ($env:GITHUB_TOKEN) {
+            Write-Host "GITHUB_TOKEN is defined."
+          } else {
+            Write-Host "GITHUB_TOKEN is NOT defined."
+          }
+
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         with:
           upload_url: ${{ steps.get_release.outputs.result }}
-          asset_path: packages\FinalPackage.zip
+          asset_path: packages/FinalPackage.zip
           asset_name: FinalPackage.zip
           asset_content_type: application/zip
