--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -138,7 +138,7 @@ jobs:
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_release.outputs.result }}
           asset_path: packages/FinalPackage.zip
