--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -114,15 +114,7 @@ jobs:
               repo: context.repo.repo,
               tag: tag
             });
-            let uploadUrl = release.data.upload_url;
-            // 去掉模板部分 { ?name,label }
-            if (uploadUrl.includes("{")) {
-              uploadUrl = uploadUrl.split("{")[0];
-            }
-            // 去除多余的引号（如果有）
-            if (uploadUrl.startsWith('"') && uploadUrl.endsWith('"')) {
-              uploadUrl = uploadUrl.slice(1, -1);
-            }
+            const uploadUrl = release.data.upload_url; // 不要去掉 {?name,label}
             core.info(`Found release with upload_url: ${uploadUrl}`);
             return uploadUrl;
 
