--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -127,12 +127,11 @@ jobs:
             Write-Host "GITHUB_TOKEN is NOT defined."
           }
 
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            packages/FinalPackage.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.get_release.outputs.result }}
-          asset_path: packages/FinalPackage.zip
-          asset_name: FinalPackage.zip
-          asset_content_type: application/zip
